# ChatTUL

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  config.yml  config_deploy.yml  css_-NIsjeh2R6WXTX0mBIdxQFTOYbSaabLRZyCGDXZCgV4.css  css_v1_rtW8UxPofyT4EiqUkICslh11h9OmmdTjTV4DKLVs.css  css_xFAEiyWHws79Kiv9YGFxOWHLKpNvljP7PYfnXJpNKnU.css  css_zCTjDw7AIXEbkrAJdQ9Xluj9yerK94D8Ejq11snQ9q4.css  datasources.json  domain.yml  download.py  endpoints_prod.yml  images.txt  index.html  pyproject.toml  requirements.dev.txt  requirements.txt  scrapy_requirements.txt  server.py  tul_field_style.css
.github/workflows/: ruff-linter.yml
.helix/: languages.toml
actions/: actions.py  text_normalizer.py
chattul_spiders/: scrapy.cfg
chattul_spiders/chattul_spiders/: items.py  pipelines.py  settings.py
context/: __main__.py  app.py  chroma.py  markdown.py  model.py
context/test/: test_markdown.py
crawler/: __main__.py  items.py  middlewares.py  settings.py
crawler/pipelines/: context_service.py  markdown.py  sqlite.py
data/: nlu.yml  rules.yml  stories.yml  synonyms.yml
frontend/: angular.json  package.json  pnpm-lock.yaml
frontend/src/: index.html
rasa/: datasources.json  domain.yml
results/: DIETClassifier_errors.json  DIETClassifier_report.json  failed_test_stories.yml  intent_errors.json  intent_report.json  story_report.json
scraping/: README.md
server/: __init__.py  schema.sql  session.py  socketio.py
test/: test_pytest.py
tests/: test_stories.yml
uni_scraper/: items.py  middlewares.py  pipelines.py  settings.py
(+15 files in other folders)
