[project]
name = "chattul"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.1.0",
    "langchain>=0.3.27",
    "pytest>=8.4.2",
    "sentence-transformers>=5.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
    "uv>=0.8.22",
]
