[project]
name = "chattul"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.1.0",
    "langchain>=0.3.27",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "scrapy>=2.13.3",
    "sentence-transformers>=5.1.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "python-lsp-ruff>=2.2.2",
    "ruff>=0.13.2",
    "uv>=0.8.22",
]

[tool.pytest.ini_options]
testpaths = [
    "test"
]
